--- a/menu_config_lang_ru.json
+++ b/menu_config_lang_ru.json
@@ -79,7 +79,8 @@
     "MainResults":{
         "monthly_payment":"Ежемесячный платеж: ",
         "total_payment":"Всего выплат: ",
-        "overpayment":"Переплата: "
+        "overpayment":"Переплата: ",
+        "overpayment_percantage": "Переплата в процентах: "
     },
     "About_us_Text":{
         "Name":"СTk Кредитный калькулятор",
@@ -101,6 +102,12 @@
         "Loan Rate": {
             "Header": "Процентная ставка по кредиту",
             "Article": "Процентная ставка — важнейший критерий, который следует оценивать перед взятием кредита. Единица измерения кредитной ставки — проценты годовых. Он демонстрирует количество начисляемых процентов на долг за один год. По факту, годовая ставка дробится на 365 дней и начисляется ежедневно. Каждый банк имеет свои принципы выдачи кредитов, а также ставки по процентам.\nФакторы, которые влияют на формирование кредитной ставки: \nКлючевая ставка ЦБ РФ. Банк выдает вам не свои деньги, а те, которые он сам взял в кредит у центрального банка по ключевой ставке. Чтобы заработать, банк прибавляет к ключевой ставке дополнительные проценты. Чем ниже ключевая ставка, тем выгоднее будет брать кредит, так как переплата будет меньше. Регулярно проводятся заседания ЦБ, в ходе которых корректируется ключевая ставка. Она может стать как больше, так и меньше — все зависит от экономического положения страны на мировой арене.\nТип кредита. Чем меньше банк уверен в надежности кредита, тем больше вам придется по нему переплатить. К примеру, у ипотеки кредитная ставка гораздо ниже, чем у потребительского кредита, так как в таком случае у банка в залоге остается приобретенная недвижимость. В других же случаях у банка мало гарантий того, что заемщик будет стабильно выплачивать кредит, поэтому и процентная ставка выше.\nХарактеристики заемщика. В первую очередь, это кредитная история и качество ваших взаимодействий с конкретным банком. Сотрудники банка гарантировано будут оценивать кредитную историю заемщика, чтобы на ее основе принять решение как о факте выдачи кредита, так и о процентной ставке. Чем лучше история, тем ниже будут проценты. У зарплатных клиентов банка есть возможность воспользоваться скидкой от 0.3 до 0.6 процента."
+        }
+    },
+    "Error Messages":{
+        "Value Error":{
+            "Title":"Ошибка данных",
+            "Text":"Введите корректные данные в поля"
         }
     }
     
